Deploy-ready backend

--- a/server/.env
+++ b/server/.env
@@ -1,23 +1,30 @@
-# Backend Port
+# -----------------------------
+# 🌿 Environment Configuration
+# -----------------------------
+
+# App
 PORT=5000
+NODE_ENV=production
 
 # MongoDB Connection
 MONGO_URI=mongodb+srv://sumadhar29:Sumadhar12@cluster0.mlbegw4.mongodb.net/organicfruit?retryWrites=true&w=majority&appName=Cluster0
 
-# JWT Secret Key
-JWT_SECRET=your_jwt_secret_key_here
+# JWT Secret
+JWT_SECRET=your_super_secret_key_here
 
-# Node Environment
-NODE_ENV=production
+# Frontend URL (for CORS)
+CLIENT_URL=https://organicfruit.vercel.app
 
-# Frontend URL for CORS
-CLIENT_URL=https://your-frontend-domain.com  # Replace with your deployed frontend URL
-
-# Twilio Credentials
+# -----------------------------
+# 🔔 Twilio Credentials
+# -----------------------------
 TWILIO_ACCOUNT_SID=your_twilio_sid
 TWILIO_AUTH_TOKEN=your_twilio_token
 TWILIO_PHONE_NUMBER=+your_twilio_phone_number
 
-# Email Credentials
+# -----------------------------
+# 📧 Email Credentials
+# -----------------------------
 EMAIL_USER=sumadhar30@gmail.com
-EMAIL_PASS=Sumadhar12
+EMAIL_PASS=your_app_password_here
+    
