--- a/server/package.json
+++ b/server/package.json
@@ -3,20 +3,20 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "V Sumadhar",
   "license": "ISC",
-  "description": "",
+  "description": "OrganicFruit Backend API",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.4",
+    "mongoose": "^8.6.4",
     "nodemailer": "^7.0.6",
     "twilio": "^5.8.0"
   },
