--- a/server/.env
+++ b/server/.env
@@ -7,7 +7,7 @@ PORT=5000
 NODE_ENV=production
 
 # MongoDB Connection
-MONGO_URI=mongodb+srv://sumadhar29:Sumadhar12@cluster0.mlbegw4.mongodb.net/organicfruit?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://sumadhar30:Sumadhar12@cluster0.u0ud88f.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT Secret
 JWT_SECRET=your_super_secret_key_here
