--- a/server/.env
+++ b/server/.env
@@ -26,5 +26,5 @@ TWILIO_PHONE_NUMBER=+your_twilio_phone_number
 # 📧 Email Credentials
 # -----------------------------
 EMAIL_USER=sumadhar30@gmail.com
-EMAIL_PASS=your_app_password_here
+EMAIL_PASS=Sumakund@12
     
